// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Distribution gap renders 1`] = `
<div
  class="StyledGrommet-gKbdxL iuxDFS"
>
  <div
    class="StyledBox-YaZNy jnVzB"
  >
    <div
      class="StyledBox-YaZNy gPwKKo"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="StyledBox__StyledBoxGap-eHDBek cXBKdA"
    />
    <div
      class="StyledBox-YaZNy gPwKKo"
    >
      <div
        class="StyledBox-YaZNy pKGgf"
      >
        <span>
          2
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-eHDBek eMfboU"
      />
      <div
        class="StyledBox-YaZNy hwiSKB"
      >
        <span>
          1
        </span>
      </div>
    </div>
  </div>
  <div
    class="StyledBox-YaZNy jnVzB"
  >
    <div
      class="StyledBox-YaZNy gPwKKo"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="StyledBox__StyledBoxGap-eHDBek bKXmJV"
    />
    <div
      class="StyledBox-YaZNy gPwKKo"
    >
      <div
        class="StyledBox-YaZNy pKGgf"
      >
        <span>
          2
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-eHDBek kpDtwP"
      />
      <div
        class="StyledBox-YaZNy hwiSKB"
      >
        <span>
          1
        </span>
      </div>
    </div>
  </div>
  <div
    class="StyledBox-YaZNy jnVzB"
  >
    <div
      class="StyledBox-YaZNy gPwKKo"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="StyledBox__StyledBoxGap-eHDBek koqsCN"
    />
    <div
      class="StyledBox-YaZNy gPwKKo"
    >
      <div
        class="StyledBox-YaZNy pKGgf"
      >
        <span>
          2
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-eHDBek cxLOlY"
      />
      <div
        class="StyledBox-YaZNy hwiSKB"
      >
        <span>
          1
        </span>
      </div>
    </div>
  </div>
  <div
    class="StyledBox-YaZNy jnVzB"
  >
    <div
      class="StyledBox-YaZNy gPwKKo"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="StyledBox__StyledBoxGap-eHDBek dbIelo"
    />
    <div
      class="StyledBox-YaZNy gPwKKo"
    >
      <div
        class="StyledBox-YaZNy pKGgf"
      >
        <span>
          2
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-eHDBek fSBrRC"
      />
      <div
        class="StyledBox-YaZNy hwiSKB"
      >
        <span>
          1
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Distribution renders 1`] = `
<div
  class="StyledGrommet-gKbdxL iuxDFS"
/>
`;

exports[`Distribution values renders 1`] = `
<div
  class="StyledGrommet-gKbdxL iuxDFS"
>
  <div
    class="StyledBox-YaZNy jnVzB"
  >
    <div
      class="StyledBox-YaZNy cMAQda"
    >
      <span>
        20
      </span>
    </div>
    <div
      class="StyledBox__StyledBoxGap-eHDBek cXBKdA"
    />
    <div
      class="StyledBox-YaZNy bIztvc"
    >
      <div
        class="StyledBox-YaZNy gPwKKo"
      >
        <span>
          3
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-eHDBek eMfboU"
      />
      <div
        class="StyledBox-YaZNy hxpyZw"
      >
        <div
          class="StyledBox-YaZNy pKGgf"
        >
          <span>
            2
          </span>
        </div>
        <div
          class="StyledBox__StyledBoxGap-eHDBek cXBKdA"
        />
        <div
          class="StyledBox-YaZNy hwiSKB"
        >
          <span>
            1
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
